fix: enhance script handling to prevent conflicts with Rocket Loader

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -13,7 +13,8 @@
         "sourceMap": true,
         "baseUrl": ".",
         "noImplicitAny": false,
-        "types": ["node"],
+        "skipLibCheck": true,
+        "lib": ["ESNext", "DOM"],
         "paths": {
             "@cmmv/blog": ["../../packages/plugin"],
             "@cmmv/blog/*": ["../../packages/plugin/*"],
